--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hacktoberfest 2019</title>
+    <title>Hacktoberfest 2020</title>
     <link rel="stylesheet" href="css/uikit.min.css" />
     <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body class="uk-background-muted">
     <nav class="uk-navbar-container" uk-navbar>
         <div class="uk-navbar-left">
-            <a class="uk-navbar-item uk-logo" href="#">HacktoberProfile</a>
+            <a class="uk-navbar-item uk-logo" href="#">HacktoberFest20 Contributors</a>
         </div>
         <div class="uk-navbar-right">
             <button class="uk-button uk-button-default uk-border-rounded uk-button-width-small uk-margin-small-right uk-visible@m">
